--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </div>
 <center><h2>Let us see why hackers are dangerous!</h2></center>
 <center><img src="kevin.jpg"></center>
-<center><h3>kevin mitnick</h3></center>
+<center><h3>kevin</h3></center>
 
 <div id="hero"><ul><li style="list-style-type: disc;"><p style="padding-left: 15px;">Kevin Mitnick (born August 6, 1963) is an American computer security consultant, author, and hacker. In the mid nineties, he was “The World’s Most Wanted Hacker”. Since 2000, he has been a successful security consultant, public speaker and author.In his whole life, he hacked many companies like DEC's computer network,Pacific Bell voicemail computers,Digital Equipment Corporation's network etc.he was caught by polices many times, but at last Mitnick was eventually caught and convicted with a five-year prison sentence. After fully serving those years, he became a consultant and public speaker for computer security. He now runs Mitnick Security Consulting, LLC.
 </p></li></ul></div>
@@ -108,23 +108,23 @@
 <hr>
 
 <center><img src="james.png"></center>
-<center><h3>Jonathan James</h3></center>
+<center><h3>James</h3></center>
 <p>The story of jonathan james is a bit shocking.He began hacking at a young age, managing to hack into several commercial and government networks.James eventually hacked into NASA's network and downloaded enough source code (assets equaling $1.7 million at the time) to learn how the International Space Station worked. NASA had to shut down its network for three entire weeks while they investigated the breach, costing an additional $41,000.In 2007, several high-profile companies fell victim to numerous malicious network attacks. Even though James denied any involvement, he was suspected and investigated. In 2008, James committed suicide, believing he would be convicted of crimes he didn't commit.</p>
 
 <hr>
 <center><img src="garry.jpg" style="height: 500px; width: 700px;"></center>
-<center><h3>Garry mckinnon</h3></center>
+<center><h3>Garry</h3></center>
 <p>Gary McKinnon, known as "Solo" on the internet, allegedly coordinated what would become the largest military computer hack of all time.Over a 13-month period from February 2001 to March 2002, McKinnon illegally accessed 97 computers belonging to the US Armed Forces and NASA.He claimed he was only searching for information on free energy suppression and UFO cover-ups, but according to US authorities, he deleted a number of critical files and rendered over 300 computers inoperable, resulting in over $700,000 in damages.After a series of appeals, the British Prime Minister at the time, Theresa May, blocked his extradition on the grounds that he was "seriously ill" and that extradition would be "incompatible with [his] human rights.</p>
 
 <hr>
 <center><img src="geo.jpg" style="height: 500px; width: 700px;"></center>
-<center><h3>George Hotz</h3></center>
+<center><h3>Geohot</h3></center>
 <p>george hotz also known as "geohot" is the person to hack apple.In June 2014, Hotz published a root exploit software hack for Samsung Galaxy S5 devices used in the US market. The exploit is built around the CVE-2014-3153 vulnerability, which was discovered by hacker Pinkie Pie, and it involves an issue in the Futex subsystem that in turn allows for privilege escalation.In August 2007, seventeen-year-old George Hotz became the first person reported to remove the SIM lock on an iPhone.Since September 2015, he has been working on his vehicle automation machine learning company.</p>
 
 <hr>
 
 <center><img src="astra.jpg" style="height: 500px; width: 500px;"></center>
-<center><h3>Astra hacker</h3></center>
+<center><h3>Astra</h3></center>
 <p>The hackers which we saw above were somehow, caught by the police, but in this whole list, astra is only hacker who have never been caught.Astra is the pseudonym of a Greek hacker who infiltrated the computers of the French aviation company Dassault Group and stole weapons technology data for over five years. The information he accessed included confidential data about jet fighters and other military-grade aircrafts.and when the forces tried to trace him, he escaped from there, and never been caught. Many people say that Astra was an Indian.</p>
 
 <center><marquee width="40%" direction="center" height="60px" bgcolor="black" scrollamount="12">
