--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <img src="download.jpg">
     
         <ul>
-            <li style="padding-left: 2px; list-style-type: none; background-color: none; margin-left:22px;font-family: Cursive; color: red; font-size: 25px">WE ARE HACKERS</li>
+            <li style="padding-left: 2px; list-style-type: none; background-color: none; margin-left:22px; color: red; font-size: 25px">WE ARE HACKERS</li>
         </ul>
     </div>
     <div>
